# python-package-test

./: LICENSE  pyproject.toml  setup.py
src/other/: __init__.py
src/package_test/: __init__.py  user.py
src/package_test/other/: __init__.py  other.py
