[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packagetest"
version = "1.0.0"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Author", email = "author@example.com"},
]
description = "Package Test"
license = {text = "MIT license"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]