[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "package_test"
version = "1.1.0"
description = "A sample Python package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "A. Random Developer", email = "author@example.com" }
]
maintainers = [
  {name = "A. Great Maintainer", email = "maintainer@example.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"


[tool.setuptools]
package-data = {"sample" = ["*.dat"]}